Bug 14736 - Error path in change_file_owner_to_parent() can free in-use memory.
Summary: Error path in change_file_owner_to_parent() can free in-use memory.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.14.5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-09 19:34 UTC by Jeremy Allison
Modified: 2021-07-19 06:18 UTC (History)
2 users (show)

See Also:


Attachments
git-am fix for 4.14.next, 4.13.next. (1.06 KB, patch)
2021-06-09 19:50 UTC, Jeremy Allison
no flags Details
git-am fix for 4.14.next, 4.13.next. (1.29 KB, patch)
2021-06-11 16:57 UTC, Jeremy Allison
npower: review+
jra: review? (slow)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2021-06-09 19:34:27 UTC

    
Comment 1 Jeremy Allison 2021-06-09 19:34:46 UTC
Have patch, need bugnumber.
Comment 2 Jeremy Allison 2021-06-09 19:50:36 UTC
Created attachment 16645 [details]
git-am fix for 4.14.next, 4.13.next.

Also going into master as part of:

https://gitlab.com/samba-team/devel/samba/-/pipelines/317994833
Comment 3 Jeremy Allison 2021-06-09 23:19:52 UTC
Scratch that ci run. Unrelated changes screwed it up. I'll run it again separately :-).
Comment 4 Samba QA Contact 2021-06-11 10:18:03 UTC
This bug was referenced in samba master:

4f20d310af2bb1f96dea4810a7130492cc4cfc55
Comment 5 Jeremy Allison 2021-06-11 16:57:14 UTC
Created attachment 16651 [details]
git-am fix for 4.14.next, 4.13.next.

Cherry-pick from master.
Comment 6 Ralph Böhme 2021-06-14 15:58:47 UTC
Reassigning to Karolin for inclusion in 4.13 and 4.14.
Comment 7 Karolin Seeger 2021-06-29 06:43:50 UTC
(In reply to Ralph Böhme from comment #6)
Pushed to autobuild-v4-{13,14}-test.
Comment 8 Samba QA Contact 2021-07-12 11:04:20 UTC
This bug was referenced in samba v4-13-test:

b0746202c206c6fa7c3dfc84691254910f641ab4
Comment 9 Samba QA Contact 2021-07-12 13:53:36 UTC
This bug was referenced in samba v4-14-test:

4936ad998598325f1b472d7ecb2af82c08a1ef8f
Comment 10 Samba QA Contact 2021-07-13 10:34:02 UTC
This bug was referenced in samba v4-14-stable (Release samba-4.14.6):

4936ad998598325f1b472d7ecb2af82c08a1ef8f
Comment 11 Samba QA Contact 2021-07-14 08:15:47 UTC
This bug was referenced in samba v4-13-stable (Release samba-4.13.10):

b0746202c206c6fa7c3dfc84691254910f641ab4
Comment 12 Karolin Seeger 2021-07-19 06:18:35 UTC
Closing out bug report.

Thanks!